added dev requirements and configurations for testing

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,3 +20,17 @@ install_requires =
 package_dir =
     =src
 zip_safe = no
+
+[options.extras_require]
+testing =
+    pytest>=6.2
+    pytest-cov>=3.0
+    mypy>=0.910
+    flake8>=3.9
+    tox>=3.24
+
+[options.package_data]
+vizml = py.typed
+
+[flake8]
+max-line-length = 160
