--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,12 @@
 [tox]
 minversion = 3.8.0
-envlist = py39, flake8, mypy
+envlist = py38, py39, flake8, mypy
 isolated_build = true
 
 [gh-actions]
 python =
     3.9: py39, mypy, flake8
+    3.8: py38
 
 [testenv]
 setenv =
