--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ setenv =
 deps =
     -r{toxinidir}/requirements_dev.txt
 commands =
-     pytest --basetemp={envtmpdir}
+     pytest
 
 [testenv:flake8]
 basepython = python3.9
