checking out some tips to solve tox error for pytest

--- a/tox.ini
+++ b/tox.ini
@@ -9,12 +9,11 @@ python =
     3.8: py38
 
 [testenv]
-setenv =
-    PYTHONPATH = {toxinidir}
+changedir = tests
 deps =
     -r{toxinidir}/requirements_dev.txt
 commands =
-    pytest --basetemp={envtmpdir}
+    commands = pytest --basetemp="{envtmpdir}"
 
 [testenv:flake8]
 basepython = python3.9
