--- a/tox.ini
+++ b/tox.ini
@@ -9,11 +9,11 @@ python =
     3.8: py38
 
 [testenv]
-changedir = tests
 deps =
     -r{toxinidir}/requirements_dev.txt
+changedir = tests
 commands =
-    commands = pytest --basetemp="{envtmpdir}"
+    pytest --basetemp={envtmpdir}
 
 [testenv:flake8]
 basepython = python3.9
