--- a/tox.ini
+++ b/tox.ini
@@ -9,9 +9,10 @@ python =
     3.8: py38
 
 [testenv]
+setenv =
+    PYTHONPATH = {toxinidir}
 deps =
     -r{toxinidir}/requirements_dev.txt
-changedir = tests
 commands =
     pytest --basetemp={envtmpdir}
 
