--- a/setup.cfg
+++ b/setup.cfg
@@ -12,8 +12,7 @@ classifiers =
     Programming Language :: Python :: 3.8
 
 [options]
-packages =
-    vizml
+packages = find:
 install_requires =
     pandas>=1.3
     numpy>=1.21
@@ -39,3 +38,6 @@ vizml = py.typed
 [flake8]
 max-line-length = 160
 per-file-ignores = __init__.py:F401
+
+[options.packages.find]
+where=src
